# openaudio

./: .gitignore  .pypirc.template  LICENSE  MANIFEST.in  PYPI_UPLOAD_GUIDE.md  README.md  README_PYPI.md  SETUP_GUIDE.md  build_for_pypi.py  build_secure.py  example.py  pyproject.toml  quickstart.py  setup.py
openaudio/: __init__.py  _core.py  _obfuscator.py  client.py  exceptions.py  models.py
