[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "openaudio"
version = "1.0.0"
authors = [
    {name = "OpenAudio Team", email = "support@openaudio.io"},
]
description = "Professional Text-to-Speech SDK for Python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["tts", "text-to-speech", "audio", "speech", "synthesis", "voice", "ai"]

[project.urls]
"Homepage" = "https://github.com/amrhym/openaudio"
"Bug Tracker" = "https://github.com/amrhym/openaudio/issues"
"Repository" = "https://github.com/amrhym/openaudio"

[tool.setuptools.packages.find]
include = ["openaudio*"]